# Sysml_To_Pytest

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: ARCHITECTURE.md  SYSML_V2_API_SETUP.md
examples/: demo_workflow.py  trace.json  trace.md
examples/models/: battery_requirements.sysml  christmas_tree_requirements.sysml
examples/system/: battery.py  christmas_tree.py
examples/tests/: test_generated_requirements.py
sysml2pytest/: __init__.py  cli.py
sysml2pytest/extractor/: __init__.py  client.py  extractor.py  models.py
sysml2pytest/generator/: __init__.py  generator.py  templates.py
sysml2pytest/plugin/: __init__.py  markers.py  plugin.py  traceability.py
sysml2pytest/sync/: __init__.py  detector.py  fingerprint.py  parser.py  state.py  updater.py
sysml2pytest/transpiler/: __init__.py  hypothesis_strategy.py  transpiler.py
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py  test_hypothesis_strategy.py  test_integration.py  test_models.py  test_sync_detector.py  test_sync_fingerprint.py  test_sync_state.py  test_transpiler.py
